5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4427/executions/1644_1054.log
== TEST (2019-04-14 17:40:09) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

#ler as coordenadas de x e y
x=float(input("entrar com o valor de x: "))
y=float(input("entrar com o valor de y: "))

#condições
if (2*x+y=3):
	mensagem = "ponto pertence a reta"
else
	mensagem = "ponto nao pertence a reta"
	
#impessao da mensagem
print(mensagem)

-- ERROR:
File "XXXX", line 10
    if (2*x+y=3):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 17:40:40) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

#ler as coordenadas de x e y
x=float(input("entrar com o valor de x: "))
y=float(input("entrar com o valor de y: "))

#condições
if (2*x + y == 3):
	mensagem = "ponto pertence a reta"
else
	mensagem = "ponto nao pertence a reta"
	
#impessao da mensagem
print(mensagem)

-- ERROR:
File "XXXX", line 12
    else
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 17:40:52) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

#ler as coordenadas de x e y
x=float(input("entrar com o valor de x: "))
y=float(input("entrar com o valor de y: "))

#condições
if (2*x + y == 3):
	mensagem = "ponto pertence a reta"
else:
	mensagem = "ponto nao pertence a reta"
	
#impessao da mensagem
print(mensagem)

-- OUTPUT:
ponto pertence a reta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 17:41:13) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

#ler as coordenadas de x e y
x=float(input("entrar com o valor de x: "))
y=float(input("entrar com o valor de y: "))

#condições
if (2*x + y == 3):
	mensagem = "ponto pertence a reta"
else:
	mensagem = "ponto nao pertence a reta"
	
#impessao da mensagem
print(mensagem)

-- EXECUTION TIME:
0.148617
-- TEST CASE 1:
---- input:
20
-37
---- correct output:
ponto pertence a reta
---- user output:
ponto pertence a reta
-- TEST CASE 2:
---- input:
5
13
---- correct output:
ponto nao pertence a reta
---- user output:
ponto nao pertence a reta
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
